--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -10,3 +10,15 @@ hr {
     width: 10%;
     border-width: 8px;
 }
+
+h1 {
+    color: #211A4C;
+}
+
+h2 {
+    color: #211A4C;
+}
+
+h3 {
+    color: #211A4C;
+}
